--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,6 +129,7 @@
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
        <% @items.each do |item| %>
       <li class='list'>
+      <% if @items.length > 0 %>
         <%= link_to items_path(item.id), method: :get do %>
         <div class='item-img-content'>
           <%= link_to image_tag(item.image, class: "item-img"), item_path(item) %>
@@ -153,6 +154,7 @@
           </div>
         </div>
         <% end %>
+      <% end %>
       </li>
       <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
