--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,7 +33,7 @@
     <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
    <% elsif user_signed_in? && current_user.id != @item.user_id && @item.order == nil%>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to '購入画面に進む',  "/items/#{@item.id}/orders", class:"item-red-btn"%>
+    <%= link_to '購入画面に進む',  item_orders_path(@item.id), class:"item-red-btn"%>
    <% end %>
   <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
